# mathsInterpreter

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: evaluate.cpp.8BD733CFF7A49722.idx  evaluate.cpp.A7C1CE538479F50A.idx  evaluate.h.83C6F003F400429E.idx  evaluate.h.D6442D34E12AB1F0.idx  lexer.cpp.23B393621CCE414C.idx  lexer.cpp.291152DCB6189ACC.idx  lexer.cpp.45453902439B1AE2.idx  lexer.h.3133746E02163CCD.idx  lexer.h.540AD60B786E8307.idx  lexer.h.9EF89358AC5E9B71.idx  main.cpp.008A4BDF2623B410.idx  main.cpp.1D71052DCECF2E5C.idx  main.cpp.8E48A517DCE20187.idx  parser.cpp.574AF60EA23A3F54.idx  parser.cpp.FFC2974CCFC8E044.idx  parser.h.052CD81724B96EAF.idx  parser.h.EC02EA8676041741.idx  repl.cpp.71D86E598138C22B.idx  repl.h.86FD39D13D8E12AA.idx  type.h.26212A8E698BFB48.idx  type.h.79DDA2877F9F9A74.idx  utils.h.FC05FD728B2DE7E3.idx
include/: evaluate.h  lexer.h  parser.h  repl.h  type.h  utils.h
src/: evaluate.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp
